--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,23 @@
     {
       "src": "src/app.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "src/static/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "src/static/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "src/app.py"
     }
-  ]
+  ],
+  "env": {
+    "PYTHONPATH": "src"
+  }
 }
