--- a/vercel.json
+++ b/vercel.json
@@ -3,24 +3,23 @@
   "builds": [
     {
       "src": "src/app.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "src/static/**",
-      "use": "@vercel/static"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
     }
   ],
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "src/static/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "src/app.py"
     }
   ],
-  "env": {
-    "PYTHONPATH": "src"
+  "functions": {
+    "src/app.py": {
+      "memory": 1024,
+      "maxDuration": 60
+    }
   }
 }
